# wht-video-codec

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  codec.cpp  codec.h  encoded_io.cpp  encoded_io.h  encoded_video_io.cpp  encoded_video_io.h  image_io.cpp  image_io.h  main.cpp  metrics.cpp  metrics.h  test_runner.cpp  test_runner.h  types.h  vcpkg.json  video_io_ffmpeg.cpp  video_io_ffmpeg.h  wht.cpp  wht.h
docs/: COMMANDS.md
